--- a/public/stylesheets/pages/_carer-profile.scss
+++ b/public/stylesheets/pages/_carer-profile.scss
@@ -77,4 +77,13 @@
         }
     }
 
+    .profile-phoneSection{
+        display: flex;
+        justify-content: space-between;
+
+        > * {
+            width: 40%;
+        } 
+    }
+
 }
