--- a/public/stylesheets/components/_forms.scss
+++ b/public/stylesheets/components/_forms.scss
@@ -219,11 +219,14 @@ input:-webkit-autofill:active  {
 .editField{
 
     &_label {
-    
+        width: 100%;
+        margin-bottom: 5px;;
+
         label{
             width: auto;
             padding-right: 10px;
             font-size: 1.6rem;
+            margin: 0;
         }
     
         button{
@@ -240,10 +243,18 @@ input:-webkit-autofill:active  {
         }
     }
 
-    input{
+    input,
+    textarea,
+    .custom-select{
         font-size: 1.7rem;
         padding: 0;
         border: 0;
+        font-weight: 300;
+        min-height: 35px;
+    }
+
+    textarea{
+        margin-top:10px;
     }
 }
 
