--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -45,7 +45,10 @@
                                   <a class="nav-link" href="/login">Inciciar Sesión</a>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link" href="/profile">Mi cuenta</a>
+                                  <a class="nav-link" href="/profile/{{currentUserInfo.user._id}}">Mi perfil</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="/profile/dogs/{{currentUserInfo.dog._id}}">Mis perros</a>
                               </li>
                               <li class="nav-item">
                                   <a class="nav-link" href="/service">Pedir Letsdog</a>
