dog profile, in progress

--- a/views/profile-dog.hbs
+++ b/views/profile-dog.hbs
@@ -13,10 +13,10 @@
                 </div>
             </div>
         </section>
-        <form enctype="multipart/form-data" id="photoDogForm" class="form-avatar">
-            <div id="photoDogAvatar" class="avatar cover" style="background-image: url('{{dog.photo}}');"></div>
-            <input class="d-none" id="photoDogInputFile" type="file" name="photo">
-            <input id="photoDogSubmit" type="submit">
+        <form enctype="multipart/form-data" id="photoDogAvatarForm" class="form-avatar">
+            <div id="photoDogAvatarPreview" class="avatar cover" style="background-image: url('{{dog.photo}}');"></div>
+            <input class="d-none" id="photoDogAvatarInputFile" type="file" name="photo">
+            <input id="photoDogAvatarBtnSubmit" type="submit">
         </form>
     </section>
     <div class="box-main">
