--- a/views/profile-dog.hbs
+++ b/views/profile-dog.hbs
@@ -21,7 +21,7 @@
     </section>
     <div class="box-main">
         <section class="profile-subHeader form-row mt-0">
-            <div class="profile-subHeader_name">
+            <div class="half-col">
                 <div class="profile-field form-group editField disabledField">
                     <div class="editField_label">
                         <label>Nombre</label>
@@ -31,7 +31,7 @@
                     <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="Dog" data-id="dogNameInput" type="button">Modificar</button>
                 </div>
             </div>
-            <div class="profile-field profile-score">
+            <div class="half-col">
                 <div class="editField disabledField">
                     <div class="editField_label">
                         <label>Edad</label>
@@ -59,25 +59,77 @@
                             <option value="18">18</option>
                         {{/select}}
                     </select>
-                    <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="Dog" data-id="dogNameInput" type="button">Modificar</button>
+                    <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="Dog" data-id="dogAgeInput" type="button">Modificar</button>
                 </div>
             </div>
         </section>
-        <section>
-            <div class="profile-field form-group editField disabledField">
-                <div class="editField_label">
-                    <label>Raza</label>
-                    <button data-type="editable" data-id="dogBreedInput" type="button"><span class="icon-editar"></span></button>
+        <section class="form-row">
+            <div class="half-col">
+                <div class="profile-field form-group editField disabledField mb-0 ">
+                    <div class="editField_label">
+                        <label>Raza</label>
+                        <button data-type="editable" data-id="dogBreedInput" type="button"><span class="icon-editar"></span></button>
+                    </div>
+                    <select class="custom-select" id="dogBreedInput" data-field="editable" name="breed">
+                        {{#select dog.breed}}
+                            <option value="caniche">Caniche</option>
+                            <option value="chihuahua">Chihuahua</option>
+                        {{/select}}
+                    </select>
+                    <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="Dog" data-id="dogBreedInput" type="button">Modificar</button>
                 </div>
-                <select class="custom-select" id="dogBreedInput" data-field="editable" name="breed">
-                    {{#select dog.breed}}
-                        <option value="caniche">Caniche</option>
-                        <option value="chihuahua">Chihuahua</option>
+            </div>
+            <div class="half-col">
+                <div class="profile-field form-group editField disabledField mb-0">
+                    <div class="editField_label">
+                        <label>Size</label>
+                        <button data-type="editable" data-id="dogSizeInput" type="button"><span class="icon-editar"></span></button>
+                    </div>
+                    <select class="custom-select" id="dogSizeInput" data-field="editable" name="size">
+                        {{#select dog.size}}
+                            <option value="small">Pequeño</option>
+                            <option value="medium">Mediano</option>
+                            <option value="big">Grande</option>
+                        {{/select}}
+                    </select>
+                    <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="Dog" data-id="dogSizeInput" type="button">Modificar</button>
+                </div>
+            </div>
+            
+        </section>
+        <section class="form-row">
+            <div class="profile-field form-group editField disabledField mb-0">
+                <div class="editField_label">
+                    <label>¿Cómo es con otros perros?</label>
+                    <button data-type="editable" data-id="signupDogBehaviorDogs" type="button"><span class="icon-editar"></span></button>
+                </div>
+                <select id="signupDogBehaviorDogs" class="custom-select" name="behavior.withDogs">
+                    {{#select dog.behavior.withDogs}}
+                    <option value="social">Social</option>
+                    <option value="shy">Timido</option>
+                    <option value="agressive">Agresivo</option>
                     {{/select}}
                 </select>
-                <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="Dog" data-id="dogNameInput" type="button">Modificar</button>
+                <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="Dog" data-id="signupDogBehaviorDogs" type="button">Modificar</button>
             </div>
         </section>
+        <section class="form-row">
+            <div class="profile-field form-group editField disabledField mb-0">
+                <div class="editField_label">
+                    <label>¿Cómo es con las personas?</label>
+                    <button data-type="editable" data-id="signupDogBehaviorPeople" type="button"><span class="icon-editar"></span></button>
+                </div>
+                <select id="signupDogBehaviorPeople" class="custom-select" name="behavior.withPeople">
+                    {{#select dog.behavior.withPeople}}
+                    <option value="social">Social</option>
+                    <option value="shy">Timido</option>
+                    <option value="agressive">Agresivo</option>
+                    {{/select}}
+                </select>
+                <button class="btn btn-primary btn-md mt-3" data-btn="modify" data-model="Dog" data-id="signupDogBehaviorPeople" type="button">Modificar</button>
+            </div>
+        </section>
+        
     </div>
 </main>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
