--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -143,5 +143,6 @@
     slider.init();
     
 </script>
+<script src="/javascripts/SignupValidator.js"></script>
 <script src="/javascripts/Signup.js"></script>
 <script src="/javascripts/Forms.js"></script>
