--- a/public/stylesheets/pages/_map-location.scss
+++ b/public/stylesheets/pages/_map-location.scss
@@ -1,9 +1,10 @@
 .v-service-map-location{
-    min-height: auto;
     display: flex;
+    height: calc(100vh - 56px);
+    overflow: hidden;
+    position: relative;
 
     .subHeader{
-        position: fixed;
         top: 56px;
         width: 100%;
         z-index: 10;
@@ -20,7 +21,7 @@
         top: 0;
         bottom: 0;
         width: 100%;
-        margin-top: 112px;
+        margin-top: 56px;
         transition: all 0.3s ease-in;
         opacity: 1;
     }
