--- a/views/setup.hbs
+++ b/views/setup.hbs
@@ -28,7 +28,7 @@
         </div>
     </section>
     <div class="carerList-block">
-        <p>Cuidadores disponibles (<span id="availableCarersCount"></span>)</p>
+        <p>Cuidadores disponibles (<span id="availableCarersCount">0</span>)</p>
         <section class="box-main box-main--carerList">
             <div id="availableCarersList" class="carerCards">
                 <div class="carerCard">
