--- a/views/setup.hbs
+++ b/views/setup.hbs
@@ -31,7 +31,7 @@
         <p>Cuidadores disponibles (<span id="availableCarersCount">0</span>)</p>
         <section class="box-main box-main--carerList">
             <div id="availableCarersList" class="carerCards">
-                <div class="carerCard">
+                <a href="/carer-profile/5f2c30098f4be837775a37bf" class="carerCard">
                     <div class="carerCard_details">
                         <div class="carerCard_bubleTime">
                             <div class="carerCard_buble">
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
     </div>
