--- a/public/stylesheets/pages/_map-location.scss
+++ b/public/stylesheets/pages/_map-location.scss
@@ -104,7 +104,7 @@
     .box-main--carerList{
         transition: all .3s ease-in-out;
         height: 100%;
-        pointer-events: none;
+        //pointer-events: none;
         width: 100%;
         bottom: 0;
         position: relative;
